fixing the body style tag

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ Backgrounds*/
   padding: 0;
   box-sizing: border-box;
 }
-.body {
+body {
   height: 100vh;
   display: flex;
   flex-direction: column;
