--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ body {
   justify-content: space-between;
   align-items: center;
   color: var(--White);
+  height: 10rem;
   gap: 1em;
 }
 .calc--switch {
